--- a/main-pg/css/styles.css
+++ b/main-pg/css/styles.css
@@ -2,7 +2,7 @@
 body{
   margin:0;
   padding: 0;
-  background-image:url("image.jpeg");
+  background-color:#E1F2FB;
   }
 img{
   text-align: center;
